--- a/style.css
+++ b/style.css
@@ -29,6 +29,25 @@
   --transition: all 400ms ease;
 }
 
+:root .purple-Theme {
+  /* purple Theme */
+  --color-primary: #ff7b02;
+  --color-primary-variant: #e5a55d;
+  --color-bg-1: #140021;
+  --color-bg-2: #1e0032;
+  --color-bg-3: #25003e;
+  --color-bg-4: #36005a;
+  --color-light: #d0b8e0;
+  --color-white: hsl(0, 0%, 90%);
+
+  /* width of the conatiner class  */
+  /* larger device */
+  --container-width-lg: 88%;
+  /* medium device */
+  --container-width-md: 92%;
+  --transition: all 400ms ease;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -73,7 +92,8 @@ a {
   color: var(--color-light);
   transition: var(--transition);
 }
-.active, a:hover {
+.active,
+a:hover {
   color: var(--color-primary);
 }
 
@@ -128,6 +148,7 @@ nav {
 .nav__social {
   display: flex;
   gap: 1rem;
+  margin-right: 1rem;
 }
 
 .nav__social a {
@@ -146,6 +167,77 @@ nav {
   box-shadow: 0rem 1rem 1rem rgba(0.7, 0.7, 0.7, 0.4);
 }
 
+/* toggle */
+.switch {
+  position: relative;
+  display: inline-block;
+  /* width: 60px;
+  height: 34px; */
+  width: 47px;
+  height: 22px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: silver;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 20px;
+  left: 2px;
+  bottom: 2px;
+  background-color: #043048;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: var(--color-light);
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196f3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(23px);
+  -ms-transform: translateX(23px);
+  transform: translateX(23px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+.mode__container {
+  display: flex;
+  gap: 1rem;
+}
+
+/*  */
+
 /* header section */
 header {
   max-width: 100vw;
@@ -158,8 +250,8 @@ header {
 
 .header__container {
   display: grid;
-  grid-template-columns: 43% 53%;
-  gap: 4%;
+  grid-template-columns: 48% 53%;
+  gap: 3%;
   margin-top: 10rem;
   position: relative;
 }
@@ -178,7 +270,7 @@ header {
   transition: var(--transition);
 }
 .header__image-sm {
-  width: 28rem;
+  width: 26rem;
   height: 28rem;
   overflow: hidden;
   position: absolute;
@@ -228,11 +320,11 @@ header {
 .header__frames {
   position: absolute;
   top: 88vh;
-  right: 44rem;
+  right: 46rem;
   transition: var(--transition);
 }
 .header__frame {
-  width: 14rem;
+  width: 15rem;
   border: 0.4rem solid var(--color-bg-3);
   box-shadow: 0 0 4rem rgba(0, 0, 0, 0.5);
   position: absolute;
@@ -274,7 +366,7 @@ header {
   );
   position: absolute;
   right: 6%;
-  bottom: -3rem;
+  bottom: -1rem;
 }
 .header__btn:hover {
   box-shadow: 0 2rem 2rem rgba(0, 0, 0, 0.3);
@@ -801,5 +893,196 @@ footer {
   }
   .nav__links {
     display: flex !important;
+    align-items: center;
+    margin-left: 1rem;
+  }
+}
+
+@media screen and (max-width: 1300px) and (min-width: 1025px) {
+  .container {
+    width: var(--container-width-md);
+    position: relative;
+  }
+  h1 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+  }
+  h2 {
+    font-size: 2.5rem;
+  }
+  /* .header__image-bg,
+  .header__image-sm {
+    display: none;
+  } */
+  /* .header__image-lg {
+    filter: saturate(1) brightness(1);
+    border: 1rem solid var(--color-bg-2);
+    width: 100%;
+    top: 0;
+    left: 0;
+  } */
+  /* .empty {
+    display: none;
+  } */
+  .header__image-bg {
+    background: var(--color-bg-4);
+    height: 22rem;
+    width: 16rem;
+    position: absolute;
+  }
+  .header__image-lg {
+    width: 25rem;
+    position: relative;
+    top: 1rem;
+    left: 1rem;
+    filter: saturate(0) brightness(0.3);
+    transition: var(--transition);
+  }
+  .header__image-sm {
+    width: 24rem;
+    height: 28rem;
+    overflow: hidden;
+    position: absolute;
+    left: 6rem;
+    top: 6rem;
+    transition: var(--transition);
+  }
+  .header__tag {
+    margin-bottom: 1rem;
+  }
+  .header__right p {
+    width: 100%;
+  }
+  .header__frames {
+    display: none;
+  }
+  .header__btn {
+    right: 6%;
+    bottom: 5rem;
+  }
+
+  #about {
+    margin-top: 5rem;
+  }
+
+  .about__right p {
+    width: 100%;
+  }
+  #gallery {
+    margin-top: 8rem;
+  }
+  #exhibitions {
+    margin-top: 7rem;
+  }
+  .swiper-wrapper {
+    margin-top: 4rem;
+    height: fit-content;
+  }
+}
+
+/* photos.html */
+.text__head {
+  text-align: center;
+  color: var(--color-primary-variant);
+  margin-bottom: 2rem;
+}
+.gallery__section {
+  margin-top: 10rem;
+}
+.gallery-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: var(--color-bg-4);
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.3);
+  width: 94%;
+  margin: 0 auto;
+  padding: 10px;
+}
+.gallery-item {
+  flex-basis: 32.7%;
+  margin-bottom: 6px;
+  opacity: 0.85;
+  cursor: pointer;
+}
+.gallery-item:hover {
+  opacity: 1;
+}
+.gallery-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.gallery-content {
+  font-size: 0.8em;
+}
+
+.lightbox {
+  position: fixed;
+  display: none;
+  background-color: rgba(0, 0, 0, 0.6);
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  top: 0;
+  left: 0;
+}
+.lightbox-content {
+  position: relative;
+  width: 65%;
+  height: 58%;
+
+  margin: 5% auto;
+  margin-top: 100px;
+}
+.lightbox-content img {
+  border-radius: 3px;
+  border: 6px solid white;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.lightbox-prev,
+.lightbox-next {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #fff;
+  padding: 9px;
+  top: 45%;
+  cursor: pointer;
+}
+.lightbox-prev {
+  left: 0;
+}
+.lightbox-next {
+  right: 0;
+}
+.lightbox-prev:hover,
+.lightbox-next:hover {
+  opacity: 0.8;
+}
+
+@media (max-width: 767px) {
+  .gallery-container {
+    width: 100%;
+  }
+  .gallery-item {
+    flex-basis: 49.8%;
+    margin-bottom: 3px;
+  }
+  .lightbox-content {
+    width: 80%;
+    height: 60%;
+    margin: 15% auto;
+  }
+}
+@media (max-width: 480px) {
+  .gallery-item {
+    flex-basis: 100%;
+    margin-bottom: 1px;
+  }
+  .lightbox-content {
+    width: 90%;
+    margin: 20% auto;
   }
 }
